--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,5 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install -r test-requirements.txt
-script: pytest
+script:
+  - python -m pytest
