--- a/sampleconfig.ini
+++ b/sampleconfig.ini
@@ -5,4 +5,4 @@ auth_type = OAuth
 [OAuth]
 id = client_id
 secret = client_secret
-auth_host = https://auth.wattsight.com
+auth_urlbase = https://auth.wattsight.com
