Add host param to data_request() (#6)

--- a/sampleconfig.ini
+++ b/sampleconfig.ini
@@ -1,8 +1,8 @@
 [common]
-host = https://data.wattsight.com
+urlbase = https://data.wattsight.com
 auth_type = OAuth
 
 [OAuth]
 id = client_id
 secret = client_secret
-auth_host = https://auth.wattsight.com
+auth_urlbase = https://auth.wattsight.com
