--- a/unittest/testconfig_oauth.ini
+++ b/unittest/testconfig_oauth.ini
@@ -1,8 +1,8 @@
 [common]
-host = rtsp://test.host
+urlbase = rtsp://test.host
 auth_type = OAuth
 
 [OAuth]
 id = clientid
 secret = verysecret
-auth_host = rtsp://auth.host
+auth_urlbase = rtsp://auth.host
