--- a/shippable.yml
+++ b/shippable.yml
@@ -32,20 +32,22 @@ build:
       shippable_retry wget https://sonarsource.bintray.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-3.2.0.1227.zip;
       unzip sonar-scanner-cli-3.2.0.1227.zip;
       fi
-    - if [ "$IS_PULL_REQUEST" == "false" -a "$SHIPPABLE_PYTHON_VERSION" == "3.7" ] &&
+    - >
+      if [ "$IS_PULL_REQUEST" == "false" -a "$SHIPPABLE_PYTHON_VERSION" == "3.7" ] &&
       [ "$BRANCH" == "master" -o "$BRANCH" == "development" -o "$BRANCH" == "shippable" ]; then
       ./sonar-scanner-3.2.0.1227/bin/sonar-scanner
       -Dsonar.host.url="https://sonar.dev.wattsight.com"
       -Dsonar.login="$SONAR_TOKEN"
-      -Dsonar.projectName="Wapi-python :\: $BRANCH"
+      -Dsonar.projectName="Wapi-python :: $BRANCH"
       -Dsonar.projectKey="wapi:$BRANCH";
       fi
-    - if [ "$IS_PULL_REQUEST" == "true" -a "$SHIPPABLE_PYTHON_VERSION" == "3.7" ]; then
+    - >
+      if [ "$IS_PULL_REQUEST" == "true" -a "$SHIPPABLE_PYTHON_VERSION" == "3.7" ]; then
       ./sonar-scanner-3.2.0.1227/bin/sonar-scanner
       -Dsonar.analysis.mode=preview
       -Dsonar.host.url="https://sonar.dev.wattsight.com"
       -Dsonar.login="$SONAR_TOKEN"
-      -Dsonar.projectName="Wapi-python :\: $BRANCH"
+      -Dsonar.projectName="Wapi-python :: $BRANCH"
       -Dsonar.projectKey="wapi:$BRANCH"
       -Dsonar.github.pullRequest="$PULL_REQUEST"
       -Dsonar.github.repository="wattsight/wapi-python"
