--- a/shippable.yml
+++ b/shippable.yml
@@ -36,22 +36,24 @@ build:
       if [ "$IS_PULL_REQUEST" == "false" -a "$SHIPPABLE_PYTHON_VERSION" == "3.7" ] &&
       [ "$BRANCH" == "master" -o "$BRANCH" == "development" -o "$BRANCH" == "shippable" ]; then
       ./sonar-scanner-3.2.0.1227/bin/sonar-scanner
-      -Dsonar.host.url="https://sonar.dev.wattsight.com"
-      -Dsonar.login="$SONAR_TOKEN"
+      -Dsonar.sources=wapi
+      -Dsonar.host.url=https://sonar.dev.wattsight.com
+      -Dsonar.login=$SONAR_TOKEN
       -Dsonar.projectName="Wapi-python :: $BRANCH"
-      -Dsonar.projectKey="wapi:$BRANCH";
+      -Dsonar.projectKey="wapi-python:$BRANCH";
       fi
     - >
       if [ "$IS_PULL_REQUEST" == "true" -a "$SHIPPABLE_PYTHON_VERSION" == "3.7" ]; then
       ./sonar-scanner-3.2.0.1227/bin/sonar-scanner
       -Dsonar.analysis.mode=preview
-      -Dsonar.host.url="https://sonar.dev.wattsight.com"
-      -Dsonar.login="$SONAR_TOKEN"
+      -Dsonar.sources=wapi
+      -Dsonar.host.url=https://sonar.dev.wattsight.com
+      -Dsonar.login=$SONAR_TOKEN
       -Dsonar.projectName="Wapi-python :: $BRANCH"
-      -Dsonar.projectKey="wapi:$BRANCH"
-      -Dsonar.github.pullRequest="$PULL_REQUEST"
-      -Dsonar.github.repository="wattsight/wapi-python"
-      -Dsonar.github.oauth="$GITHUB_TRAVIS_TOKEN";
+      -Dsonar.projectKey="wapi-python:$BRANCH"
+      -Dsonar.github.pullRequest=$PULL_REQUEST
+      -Dsonar.github.repository=wattsight/wapi-python
+      -Dsonar.github.oauth=$GITHUB_TRAVIS_TOKEN;
       fi
 
 
