--- a/shippable.yml
+++ b/shippable.yml
@@ -39,6 +39,7 @@ build:
       -Dsonar.sources=wapi
       -Dsonar.host.url=https://sonar.dev.wattsight.com
       -Dsonar.login=$SONAR_TOKEN
+      -Dsonar.python.coverage.reportPath=shippable/codecoverage/coverage.xml
       -Dsonar.projectName="Wapi-python :: $BRANCH"
       -Dsonar.projectKey="wapi-python:$BRANCH";
       fi
@@ -49,11 +50,12 @@ build:
       -Dsonar.sources=wapi
       -Dsonar.host.url=https://sonar.dev.wattsight.com
       -Dsonar.login=$SONAR_TOKEN
-      -Dsonar.projectName="Wapi-python :: $BRANCH"
-      -Dsonar.projectKey="wapi-python:$BRANCH"
+      -Dsonar.github.oauth=$GITHUB_TRAVIS_TOKEN;
       -Dsonar.github.pullRequest=$PULL_REQUEST
       -Dsonar.github.repository=wattsight/wapi-python
-      -Dsonar.github.oauth=$GITHUB_TRAVIS_TOKEN;
+      -Dsonar.python.coverage.reportPath=shippable/codecoverage/coverage.xml
+      -Dsonar.projectName="Wapi-python :: $BRANCH"
+      -Dsonar.projectKey="wapi-python:$BRANCH"
       fi
 
 
