--- a/shippable.yml
+++ b/shippable.yml
@@ -50,6 +50,7 @@ build:
       -Dsonar.sources=wapi
       -Dsonar.host.url=https://sonar.dev.wattsight.com
       -Dsonar.login=$SONAR_TOKEN
+      -Dsonar.password=""
       -Dsonar.github.oauth=$GITHUB_TRAVIS_TOKEN
       -Dsonar.github.pullRequest=$PULL_REQUEST
       -Dsonar.github.repository=wattsight/wapi-python
