--- a/shippable.yml
+++ b/shippable.yml
@@ -50,8 +50,14 @@ build:
 
   post_ci:
     - ./releases/release_package.sh test
-    - [ "$IS_PULL_REQUEST" == "true" -a "$SHIPPABLE_PYTHON_VERSION" == "3.7" -a "$BASE_BRANCH" == "master" ] && ./releases/release_package.sh test
-    - [ "$IS_PULL_REQUEST" == "false" -a "$SHIPPABLE_PYTHON_VERSION" == "3.7" -a "$BRANCH" == "master" ] && ./releases/release_package.sh release
+    - |
+      if [ "$IS_PULL_REQUEST" == "true" -a "$SHIPPABLE_PYTHON_VERSION" == "3.7" -a "$BASE_BRANCH" == "master" ]; then
+        ./releases/release_package.sh test
+      fi
+    - |
+      if [ "$IS_PULL_REQUEST" == "false" -a "$SHIPPABLE_PYTHON_VERSION" == "3.7" -a "$BRANCH" == "master" ]; then
+        ./releases/release_package.sh release
+      fi
 
 integrations:
   generic:
