Turn on junit-xml test reporting.

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,5 +2,5 @@
 test=pytest
 
 [tool:pytest]
-addopts = --cov wapi
+addopts = --cov wapi --junitxml test-results/results.xml
 python_files = unittest/*.py
