--- a/.github/workflows/publish_package.yml
+++ b/.github/workflows/publish_package.yml
@@ -35,7 +35,7 @@ jobs:
           # override VERSION file with input from dispatch action
           if [ ${{ github.event_name }} == "workflow_dispatch" ]; then
             version_input=${{ github.event.inputs.version }}
-            echo $version_input > wapi_python/VERSION
+            echo $version_input > wapi/VERSION
           fi
 
           version=$(<wapi_python/VERSION)
