--- a/Dockerfile-release
+++ b/Dockerfile-release
@@ -1,4 +1,4 @@
-# Note 15.12.23: This docker file is no more in use s
+# Note 15.12.23: This docker file is no more in use
 # Releases are done via Github Actions
 
 FROM python:3.8
