docs: Add comments for some old processes (#158)
* Updated some usage docs

* update readme

* update comments

--- a/Dockerfile-release
+++ b/Dockerfile-release
@@ -1,3 +1,6 @@
+# Note 15.12.23: This docker file is no more in use
+# Releases are done via Github Actions
+
 FROM python:3.8
 
 RUN pip install -U twine
