Update old auth url

--- a/sampleconfig.ini
+++ b/sampleconfig.ini
@@ -6,4 +6,4 @@ timeout = 300
 [OAuth]
 id = client_id
 secret = client_secret
-auth_urlbase = https://auth.wattsight.com
+auth_urlbase = https://auth.volueinsight.com
