refactor: Update old URLs (#163)

--- a/sampleconfig.ini
+++ b/sampleconfig.ini
@@ -1,9 +1,9 @@
 [common]
-urlbase = https://api.wattsight.com
+urlbase = https://api.volueinsight.com
 auth_type = OAuth
 timeout = 300
 
 [OAuth]
 id = client_id
 secret = client_secret
-auth_urlbase = https://auth.wattsight.com
+auth_urlbase = https://auth.volueinsight.com
