--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   unittests:
     timeout-minutes: 10
-    runs-on: ubuntu-latest
+    runs-on: linux-20.4
     strategy:
       matrix:
         python-version: ['3.6', '3.7', '3.8', '3.9', '3.10' , '3.11']
