--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -11,10 +11,10 @@ on:
 jobs:
   unittests:
     timeout-minutes: 10
-    runs-on: linux-20.4
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.6', '3.7', '3.8', '3.9', '3.10' , '3.11']
+        python-version: ['3.8', '3.9', '3.10' , '3.11']
     steps:
       - name: Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.12.1
