--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -11,10 +11,21 @@ on:
 jobs:
   unittests:
     timeout-minutes: 10
-    runs-on: ubuntu-20.04
+#    runs-on: ubuntu-20.04
+#    strategy:
+#      matrix:
+#        python-version: ['3.5', '3.6', '3.7', '3.8', '3.9']
+
+    runs-on: { matrix.os }
     strategy:
       matrix:
-        python-version: ['3.5', '3.6', '3.7', '3.8', '3.9']
+        - python-version: ['3.5', '3.6']
+          os: ubuntu-20.04
+
+        - python-version: ['3.7', '3.8', '3.9' ]
+          os: ubuntu-latest
+
+
     steps:
       - name: Cancel Previous Runs
         uses: styfle/cancel-workflow-action@0.12.1
