Enable matrix for different flavors of ubuntu

--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -16,15 +16,14 @@ jobs:
 #      matrix:
 #        python-version: ['3.5', '3.6', '3.7', '3.8', '3.9']
 
-    runs-on: { matrix.os }
+    runs-on: ${{ matrix.os }}
     strategy:
-      matrix:
-        - python-version: ['3.5', '3.6']
-          os: ubuntu-20.04
-
-        - python-version: ['3.7', '3.8', '3.9' ]
-          os: ubuntu-latest
-
+        matrix:
+          os:
+              - name: ubuntu-20.04
+                python-version: [ "3.6"]
+              - name: ubuntu-latest
+                python-version: [ "3.7", "3.8", "3.9" ]
 
     steps:
       - name: Cancel Previous Runs
