--- a/.github/workflows/unittests.yml
+++ b/.github/workflows/unittests.yml
@@ -1,4 +1,5 @@
 name: unittests
+
 on:
   pull_request:
     types: [opened, synchronize, reopened, ready_for_review]
@@ -9,21 +10,42 @@ on:
       - master
 
 jobs:
-  unittests:
-    timeout-minutes: 10
-#    runs-on: ubuntu-20.04
-#    strategy:
-#      matrix:
-#        python-version: ['3.5', '3.6', '3.7', '3.8', '3.9']
 
-    runs-on: ${{ matrix.os }}
+  unittests-ubuntu20:
+    timeout-minutes: 10
+    runs-on: ubuntu-20.04
+
+    steps:
+      - name: Cancel Previous Runs
+        uses: styfle/cancel-workflow-action@0.12.1
+        with:
+          access_token: ${{ github.token }}
+
+      - uses: actions/checkout@v4
+
+      - uses: actions/setup-python@v5
+        with:
+          python-version: 3.6
+
+      - name: Install dependencies
+        run: |
+          REQS="-r requirements.txt -r test-requirements.txt"
+          pip install --upgrade --upgrade-strategy eager ${REQS}
+
+      - name: Print Python Version
+        run: python --version
+
+      - name: Run tests
+        run: |
+          python -m pytest -vv
+
+  unittests-ubuntu-latest:
+    timeout-minutes: 10
+    runs-on: ubuntu-latest
+
     strategy:
-        matrix:
-          os:
-            - name: ubuntu-20.04
-              python-version: [ "3.6" ]
-            - name: ubuntu-latest
-              python-version: [ "3.7", "3.8", "3.9" ]
+      matrix:
+        python-version: [3.7, 3.8, 3.9]
 
     steps:
       - name: Cancel Previous Runs
@@ -37,13 +59,14 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies ${{ matrix.python-version }}
+      - name: Install dependencies
         run: |
           REQS="-r requirements.txt -r test-requirements.txt"
           pip install --upgrade --upgrade-strategy eager ${REQS}
+
       - name: Print Python Version
         run: python --version
+
       - name: Run tests
         run: |
           python -m pytest -vv
-
